pre-release edits

--- a/01_EMA.Rmd
+++ b/01_EMA.Rmd
@@ -2,7 +2,7 @@
 
 # (PART) Introduction {-}
 
-# What is EMA? {#introduction}
+# Introducing EMA {#introduction}
 
 
 ## What is EMA?
@@ -22,11 +22,9 @@ Ecological Momentary Assessment (EMA) has many aliases. It is known as 'Experien
 \index{EMA!Passive EMA EMA} \index{EMA!Observational EMA|see{Passive EMA}}
 \index{EMA!Active EMA} \index{EMA!Self-report EMA|see{Active EMA}}
 
-In EMA research, two forms of data collection are distinguished: 1) 'Active EMA', with which *self-report* data are collected, and 2) 'Passive EMA', with which *observational* data are collected. Active EMA requires participants to consciously provide information, for example by rating their current mood in response to a question that is prompted on their smartphone (see Figure \@ref(fig:fig01a)). In passive EMA, information is collected through wearables or logfiles without active involvement of participants, for example on heart-rate, activity, smartphone use or engagement on social media (see Figure \@ref(fig:fig01b)). 
+In EMA research, two forms of data collection are distinguished: 1) 'Active EMA', with which *self-report* data are collected, and 2) 'Passive EMA', with which *observational* data are collected. Active EMA requires participants to consciously provide information, for example by rating their current mood in response to a question that is prompted on their smartphone (see Figure \@ref(fig:fig01a)). In passive EMA, information is collected through wearables or log files without active involvement of participants, for example on heart-rate, activity, smartphone use or engagement on social media (see Figure \@ref(fig:fig01b)).Studies may combine active and passive EMA. A study into sleep patterns, for example, may involve both a self-report sleep diary and an accelerometer sensor [@Meijden2016].
 
-Studies may combine active and passive EMA. A study into sleep patterns, for example, may involve both a self-report sleep diary and an accelerometer sensor [@Meijden2016].
-
-```{r fig01a, echo = FALSE, out.width = '100%', fig.asp = .3, fig.align='center', fig.cap='Active EMA: data are collected by prompting questions to participants, for instance by using an EMA app such as MoodBuster. '}
+```{r fig01a, echo = FALSE, out.width = '95%', fig.asp = .25, fig.align='center', fig.cap='Active EMA: data are collected by prompting questions to participants, for instance by using an EMA app such as MoodBuster. '}
 library(png)
 library(grid)
 library(gridExtra)
@@ -39,7 +37,7 @@ b <- ggplot(csd[1:52, ], aes(x = date, y = as.numeric(mood_down))) +
   geom_point(size = 2, shape = 1, alpha = 1, position = position_jitter(height = .05),
              colour="black") +  
   scale_x_date() + 
-  scale_y_continuous(breaks = seq(0, 10, 2), limits = c(0, 10)) +
+  scale_y_continuous(breaks = seq(0, 8, 2), limits = c(0, 8)) +
   xlab("Time") + ylab("Mood") +
   theme_bw(10)
 
@@ -47,7 +45,7 @@ grid.arrange(g, b, ncol=2, widths = c(100, 500))
 ```
 
 
-```{r fig01b, echo = FALSE, out.width = '100%', fig.asp = .3, fig.align='center', fig.cap='Passive EMA: data are collected automatically, for instance by accelerometers such as the GeneActive actiwatch.'}
+```{r fig01b, echo = FALSE, out.width = '100%', fig.asp = .25, fig.align='center', fig.cap='Passive EMA: data are collected automatically, for instance by accelerometers such as the GeneActive actiwatch.'}
 library(jpeg)
 library(grid)
 library(gridExtra)
@@ -96,29 +94,30 @@ In *signal-contingent sampling*, participants respond to questions when they are
 
 Signal-contingent sampling can follow a fixed or a random scheme. In a fixed scheme, participants are prompted at fixed time-points, for example at 9:30, 12:30, and 16:30. In a random scheme, prompts are sent at random time points, typically in pre-set intervals. For example, participants could be prompted to complete two assessments per day, one at a random time point between 10:00 and 14:00, and one at a random time point between 14:00 and 16:00. Using pre-set intervals ensures that participants do not receive several prompts within a limited time-frame [@Piasecki2007]. In addition, it ensures that participants are not bothered by prompts at inappropriate times (e.g., participants may not appreciate prompts after 22:00 and before 7:30).
 
-With 'event-contingent sampling', the sample rate is determined by the occurence rate of the event. One way to implement this is to simply ask study participants to complete a questionnaire whenever the event occurs. When active EMA is combined with passive EMA, it may be also be possible to trigger event-based prompts automatically based on changes in passive data, for example by triggering an EMA questionnaire automatically whenever a significant change in activity level is detected [@Smyth2003].
+With 'event-contingent sampling', the sample rate is determined by the occurrence rate of the event. One way to implement this is to simply ask study participants to complete a questionnaire whenever the event occurs. When active EMA is combined with passive EMA, it may be also be possible to trigger event-based prompts automatically based on changes in passive data, for example by triggering an EMA questionnaire automatically whenever a significant change in activity level is detected [@Smyth2003].
 
-## Why do we need EMA?
+## Why EMA?
+
+### To minimize recall bias in assessment
+
 \index{Recall bias}
+
+In clinical research, self-report questionnaires are often used to assess the presence and severity of symptoms in the recent past. While useful, these retrospective self-reports are not without drawbacks, since they tap into the memory of respondents, which can be distorted [@Shiffman2008; @Moore2016]. EMA circumvents this recall bias, by asking participants to rate their *current state*, rather than asking them to reflect on past experiences.
+
+
+### To increase the ecological validity of research findings
+
 \index{Ecological validity} 
-\index{Microprocesses}
 
-### To minimize recall bias
+A key feature of EMA is the collection of data in real-world environments, as participants go about their daily activities, as opposed to data collection in controlled labs or research settings [@Shiffman2008]. Thus, EMA data can be expected to result in research findings that have better ecological validity and better generalization to the subject’s lived experience in real-world settings. Practical applications derived from EMA data are therefore expected to be more relevant to real-life situations.
 
-In clinical research, self-report questionnaires are often used to assess the presence and severity of mental health symptoms in the recent past. While useful, these retrospective self-reports are not without drawbacks, since they tap into the memory of respondents, which can be distorted [@Shiffman2008; @Moore2016]. EMA aims to minimize recall bias by asking participants to rate their *current state*, rather than asking them to reflect on past experiences.
-
-### To increase ecological validity
-\index{Exposomics}
-
-A key feature of EMA is the collection of data in real-world environments, as participants go about their daily activities, as opposed to data collection in controlled labs or research settings [@Shiffman2008]. Thus, EMA data can be expected to result in research findings that have better ecological validity and better generalizability to the subject’s lived experience in real-world settings. Practical applications derived from EMA data are therefore expected to be more relevant to real-life situations.
-
-### To study intra-individual processes
+### To advance ideographic research
 \index{Nomothetic research} \index{Ideographic research} 
 \index{Intra-individual process|see{Ideographic research}}
 
-Quantitative clinical research is largely *nomothetic*: universal characteristics of groups are the subject of study. Increasingly, however, this approach is criticised. The average group member, it is argued, does not exist, and group-level findings do not necessarily generalise to the individual members of the group, as shown by Figure \@ref(fig:fig01c).
+In clinical research, a distinction is often made between ideographic and nomothethic methods [@allport1937]. Idiographic methods are those that "aim to identify patterns of behavior within the person across a population of experiences or situations, and nomothetic methods[are] those that aim to identify patterns of behavior across a population of individuals, rather than for any given individual" [@Conner2009].  The difference is important. As is increasingly recognised, group-level findings do not necessarily generalize to the individual members of the group, as shown by Figure \@ref(fig:fig01c) (adapted from @Hamaker2012).
 
-In contrast to more qualitative idiographic studies, such as interviews and N = 1 case studies, EMA allows for the collection of large amounts of quantitative data on the individual level. Thus, EMA offers a quantitative method for *idiographic* research [@allport1937], measuring characteristics of (unique) individuals across time and context [@Shiffman2008]. This allows for a better understanding of intra-individual process, and the factors that account for variability within and between individuals [@Conner2009].
+In contrast to more qualitative idiographic methods, such as interviews and N = 1 case studies, EMA allows for the collection of large amounts of quantitative data on the individual level. Thus, EMA offers a quantitative method for *idiographic* research, measuring characteristics of (unique) individuals across time and context [@Shiffman2008]. This allows for a better understanding of intra-individual process, and of the factors that account for variability within and between individuals.
 
 ```{r fig01c, fig.asp = .4, out.width = "100%", echo = FALSE, fig.cap = "An illustration of how group-level and individual-level processes can differ dramatically: the relationship between x on y is negative in the group (as shown by the descending regression line), but positive for individuals (marked by ellipses)."}
 
@@ -158,44 +157,39 @@ ggplot(dt, aes(x = X, y = Y, group = id)) +
 ```
 
 
-
-## EMA research
-\index{Wearables}
-\index{Sensors|see{Wearables}
+## EMA research findings: A birds-eye view
 
 The use of EMA in mental health research might seem novel but this methodology has a long track record. Already in the 1980's, early pioneers used electronic devices to elicit responses from study participants to tap into (mental) health processes in everyday life [see, e.g., @Csikszentmihalyi2014]. Recent years, however, have witnessed a large increase in EMA research. Rapid technological developments, a marked interest in the individual, and a wide recognition of the need to study health-related processes in real-life situations have all contributed to this. 
 
-EMA-based research in mental health has produce an impressive trove of findings that have supported and sometimes, challenged existing theories on behaviour. EMA data, whether collected as self-report or via wearable device/sensor, have diagnostic, monitoring, management, or intervention applications (@Patel2012; @Aung2017; @Evenson2015]. Its feasibility for mental health research is evidenced by its use in observational studies and randomized controlled trials on a wide range of topics and populations. Enough results have been generated for systematic reviews and meta-analyses pubished in recent years. Below is a non-exhaustive summary of these systematic reviews or meta-analyses.
+EMA-based research in mental health has produced an impressive trove of findings that have supported and, sometimes, challenged existing theories on behavior. EMA data, whether collected as self-report or via wearable device/sensor, have diagnostic, monitoring, management, or intervention applications (@Patel2012; @Aung2017; @Evenson2015]. Its feasibility for mental health research is evidenced by its use in observational studies and randomized controlled trials on a wide range of topics and populations. Below, we present a non-exhaustive summary of systematic reviews and meta-analyses of EMA research.
 
-### Self-report EMA
-\index{EMI}
+### Active EMA
 
-Mood disorders have been well-studied using EMA methods [@Wenze2010] with several reviews outlining recent findings in depression [@Telford2012; @Wichers2011; @burton2013], anxiety disorders [@Walz2014], depression/bipolar disorder [@AanhetRot2012].The potential of EMA for use among young populations showed promising results [@Dubad2018]. Innovations in mobile devices has improved the feasibility and popularity of ecological momentary interventions (EMIs) for anxiety and depression [@schueller2017]. A systematic review and meta-analyis of EMIs reported small to medium effects on mental health [(@Versluis2016].  
+Mood disorders have been well-studied using active EMA methods [@Wenze2010], with several reviews outlining recent findings in depression [@Telford2012; @Wichers2011; @burton2013], anxiety disorders [@Walz2014], and depression/bipolar disorder [@AanhetRot2012]. The potential of EMA for use among young populations showed promising results [@Dubad2018]. Innovations in mobile devices has improved the feasibility and popularity of ecological momentary interventions (EMIs) for anxiety and depression [@schueller2017]. A systematic review and meta-analysis of EMIs reported small to medium effects on mental health [@Versluis2016].
 
-EMA is particularly suited to examine the role of emotions in development and maintenance of obesity and eating disorders [@Engel2016]. Meta-analytic results suggest that negative affect, rather than hunger, is associated with binge eating among individuals with eating disorders [@Haedt2011; @Haedt2012].
-
-EMA methods have significantly contributed to the understanding of the processes that drive substance use, cessation, and relapse, often in contrast with theory-driven studies largely derived from global reports collected through questionnaires [@Shiffman2009; @Swendsen2016].
+EMA appears to be particularly well-suited to examine the role of emotions in the development and maintenance of obesity and eating disorders [@Engel2016]. Meta-analytic results suggest that negative affect, rather than hunger, is associated with binge eating among individuals with eating disorders [@Haedt2011; @Haedt2012]. EMA methods have also significantly contributed to the understanding of the processes that drive substance use, cessation, and relapse, often in contrast with theory-driven studies largely derived from global reports collected through retrospective questionnaires [@Shiffman2009; @Swendsen2016].
 
 ### Passive EMA
-\index{EMA!Passive sensing|see{Observational EMA}}
 
-Objective EMA data collected passively through biosensors, smart devices, or context/environmental (e.g. location) is a feasible and promising method for the longitudinal monitoring of individuals with affective disorders [@Dogan2017; @kirchner2016].       
+Objective EMA data collected passively through bio-sensors, smart devices, or context/environmental (e.g. location) has been shown to be a feasible and promising method for the longitudinal monitoring of individuals with affective disorders [@Dogan2017; @kirchner2016]. The potential of passive sensing via smartphone for mental health research are outlined in two reviews, encompassing the assessment of health and well-being [@Cornet2017], and the measuring, understanding, and intervening in mental illness and maintaining mental health [@Aung2017]. A systematic review and meta-analysis on actigraphy reported diurnal variations in activity levels among individuals with depression [@burton2013]. Compared with traditional self-reports, passive sensing was reported to be less intrusive and to result in more accurate data, while providing options for continuous monitoring and feedback. 
 
-The potential of passive sensing via smartphone for mental health research are outlined in two reviews, encompassing the assessment of health and well-being [@Cornet2017], and the measuring, understanding, and intervening in mental illness and maintaining mental health [@Aung2017]. A systematic review and meta-analysis on actigraphy reported diurnal variations in activity levels among individuals with depression [@burton2013]. Compared with traditional self-reports, passive sensing is less intrusive and provides more accurate data, continual monitoring, and feedback. 
 
-In general, the reviews conclude that EMA is feasible and has the potential to make significant contributions to mental health research. Nevertheless one significant drawback of EMA highlighted in several reviews is the lack of high-quality studies. This is despite the increase in the number of studies in the past decade. Other general limitations to consider include.
+### Limitations
+
+While available reviews suggest that EMA is a feasible research method that has the potential to make significant contributions to mental health research, one significant drawback of EMA highlighted in several reviews is the lack of high-quality studies. Other general limitations considered include:
+
 \index{Limitations} 
 \index{Limitations!Selected samples}
-\index{Limitations!Practive effect}
+\index{Limitations!Practice effect}
 \index{Limitations!Feasibility}
 \index{Limitations!Privacy}
 
--	Generalizability of results due to selected samples, e.g. hospital in-patients [@burton2013], small sample size [@Dogan2017]
--	Practice effect [@Telford2012], reactivity and compliance [@Shiffman2009]
--	Issues of feasibility and tolerability of prolonged and intense data periods of data collection [@Wichers2011]
--	Issues of privacy, consent, and awareness [@Cornet2017]
--	Responsibility of researcher, e.g. in suicide ideation research [@Wenze2010]
-- Methodology issues (Dubad, 2018)
+-	Unclear generalizability of research findings due to selective samples [@burton2013], and small sample sizes [@Dogan2017]
+-	Unclear practice effects [@Telford2012], and issues related to reactivity [@Shiffman2009]
+-	Issues related to the feasibility and tolerability of prolonged and intense data periods of data collection [@Wichers2011]
+-	Issues of privacy, ethics and informed consent [@Cornet2017]
+-	Changing responsibilities of researchers and clinicians in EMA studies, e.g. in suicide ideation research [@Wenze2010]
+- Unresolved methodological issues (Dubad, 2018)
 
 \index{EMA research!Anxiety disorders}
 \index{EMA research!Eating disorders}
@@ -203,33 +197,42 @@ In general, the reviews conclude that EMA is feasible and has the potential to m
 \index{EMA research!Substance-related disorders}
 \index{EMA research!Mental health/ Well-being}
 
-Table: (\#tab:emareviews) Reviews of EMA studies targeting specific Mental
-Health Conditions
+Table: (\#tab:emareviews) An Illustrative Selection of Reviews of EMA studies targeting various mental Health Conditions
 
 | **Topic**        | **Author (Year)**        | **Outcome**        |
 |:--------------------|:--------------------|:--------------------|
-| Anxiety disorders | | |
-| | @Walz2014 | Provides insights to the temporal variability of symptoms, and associations between daily affect, behaviours, and situational cues. Combination of EMA and ambulatory assessment of physiological variables and treatment evaluations |
+| Anxiety disorders  | @Walz2014 | Provides insights to the temporal variability of symptoms, and associations between daily affect, behaviors, and situational cues. Combination of EMA and ambulatory assessment of physiological variables and treatment evaluations. |
 | | @schueller2017 | Provides an overview of the distinction of EMIs from other types of treatment. Also discusses the considerations of conducting EMI research, such as design, deployment, and evaluation |
-| | | |
-| Eating disorders | | |
-| | @Engel2016| An overview of studies on eating disorders, obesity, and bariatric surgery using EMA |
-| | | |
-| Mood disorders | | |
-| | @AanhetRot2012 | Provides an overview of EMA studies on correlates of mood, treatment effects, residual symptoms of remitted patients, paediatric populations, MDD/BD specificity, and links with neuroscience |
-| | @Aung2017 | Provides conceptual review of passive sensing techniques for measuring, understanding, and treatment of mental illness, and maintenance of mental health |
-|| @burton2013 | Diurnal variations in activity levels among depressed individuals |
-| |@Telford2012 | Identified six themes of EMA research in MDD: methodology; positive and negative affect; cortisol secretion; antidepressant treatment; work performance; genetic risk factors |
-| | @Wenze2010 | Provides an overview of EMA in mood disorder research comprising techniques used, types of population assessed, types of research questions, and a discussion of the potential of EMA in treatment setting of mood disorders |
-| | @Wichers2011 | Provides an overview for the possible clinical application of EMA in the diagnostic and treatment of MDD  |
+| Eating disorders | @Engel2016| An overview of studies on eating disorders, obesity, and bariatric surgery using EMA |
+| Mood disorders | @AanhetRot2012 | Provides an overview of EMA studies on correlates of mood, treatment effects, residual symptoms of remitted patients, paediatric populations, MDD/BD specificity, and links with neuroscience |
+| | @Aung2017 | Provides a conceptual review of passive sensing techniques for measuring, understanding, and treatment of mental illness. |
+|| @burton2013 | Focuses on diurnal variations in activity levels among depressed individuals. |
+| |@Telford2012 | Identifies six themes of EMA research in MDD: methodology; positive and negative affect; cortisol secretion; antidepressant treatment; work performance; genetic risk factors |
+| | @Wenze2010 | Provides an overview of EMA in mood disorder research comprising techniques used, types of population assessed, types of research questions, and a discussion of the potential of EMA in treatment settings |
+| | @Wichers2011 | Provides an overview for the potential clinical application of EMA in the diagnostic and treatment of MDD.  |
 | | @Versluis2016 | Provides an overview of interventions (EMI) addressing anxiety, depression, and perceived stress on positive psychological outcomes |
-| | Dubad (2018) | Provides an overview of the feasibility and efficacy of mood-monitoring applications for use among young populations (10-24 years old) |
-| | | |
-| Substance-related disorders| | |
-| | @Shiffman2009 | Review of processes that drive substance use, cessation, and relapse, sometimes in contrast with theory-driven studies that are largely derived from global reports collected through questionnaires |
+| | @Dubad2018 | Provides an overview of the feasibility and clinical impact of mood-monitoring applications targeting young populations (10-24 years old) |
+| Substance-related disorders| @Shiffman2009 | Review of processes that drive substance use, cessation, and relapse, sometimes in contrast with theory-driven studies that are largely derived from global reports collected through questionnaires |
 | | @Swendsen2016 | Conceptual review of the use of mobile technologies for research on addiction and its treatment |
-| | | |
-| Mental health/ Well-being | | |
-| | @Cornet2017 | Outlines the potential of passive sensing to detect status change and behaviour change following feedback on behaviour. Also outlines the challenges of using passive sensing |
-| | @kirchner2016 | Provides an overview of geographically explicit momentary assessment (GEMA) research to enrich EMA research in mental health and well-being |
-| | @Dogan2017 | Provides an overview of studies that combined subjective ratings with objective-collected EMA using smartphone-based systems |
+| Mental health/ Well-being | @Cornet2017 | Outlines the potential and challenges of passive sensing to detect status change and behavior change following feedback on behavior. |
+| | @kirchner2016 | Provides an overview of ' geographically explicit momentary assessment' (GEMA) research to enrich EMA research in mental health and well-being |
+| | @Dogan2017 | Provides an overview of studies that combine subjective ratings with objective EMA-data collected using smartphone-based systems |
+
+
+## What is in this manual?
+
+This manual comprises six parts, in which various aspects of EMA research will be discussed. 
+
+- Chapter 2 introduces R, the statistical program that is an indespensable tool for the EMA researcher.
+
+- Part II focuses on EMA study design (chapter 3), EMA instruments (chapter 4) and EMA data management (Chapter 5).
+
+- Part III details the momentary assessment of two specific outcomes: Mood (chapter 6) and Activity (chapter 7).
+
+- Part IV introduces EMA data analysis techniques: Feature Extraction (chapter 8), Mixed Modelling (chapter 9), and Network Analysis (chapter 10).
+
+- In part V, the application of the preceding material is illustrated in two case studies: a study into the use EMA to detect early warnings signs of depression (chapter 11), and a study into a new GPS-based measure of activity (chapter 12).
+
+- Part VI provides three catalogues of EMA resources. Chapter 13 lists EMA research groups within APH, chapter 14 lists EMA instruments that were found to be in use among APH researchers, and chapter 15 summarises useful R extensions (packages) for EMA data analysis.
+
+
