--- a/book.bib
+++ b/book.bib
@@ -621,6 +621,8 @@
   pmid          = {21574678},
 }
 
+
+
 @article{Haedt2012,
   title={Experimental evidence that changes in mood cause changes in body dissatisfaction among undergraduate women},
   author={Haedt-Matt, Alissa A and Zalta, Alyson K and Forbush, Kelsie T and Keel, Pamela K},
@@ -642,6 +644,18 @@
   year={2011},
   publisher={Wiley Online Library}
 }
+
+@article{Hamaker2012,
+  author = {Hamaker, E.},
+  doi = {10.1007/978-3-531-93094-7},
+  isbn = {9781609187484},
+  journal = {Handbook of Research Methods for Studying Daily Life},
+  title = {{Why researchers should think "within-person": A paradigmatic rationale}},
+  pages={43--61},
+  year = {2012}
+}
+
+
 
 @Article{Hufford2002,
   author  = {Hufford, Michael R. and Shields, Alan L. and Shiffman, Saul and Paty, Jean and Balabanis, Mark},
